@@ -7,16 +7,14 @@ Supplied scripts:
           (see README.txt)
 - report-generator.py: for building an interactive HTML report of a CPAchecker run
                        (see doc/BuildReport.txt)
-- table-generator.py: for creating tables that contain the output of several benchmark.py runs.
-                 as params you can either give names of result-files
-                 or run the script without params (result-files will be searched in test/results/)
-- regression.py: creates a table, that shows differences (different status of a file)
-                 between runs of a benchmark (i.e. SAFE vs UNSAFE).
-                 to run the script you have to give 2 (or more) result-files
-                 (i.e. "regression.py  oldResult.xml  newResult.xml").
+- table-generator.py
+  Creates HTML and CSV tables that contain the output of several benchmark.py runs.
+  Also creates tables with just those results differing between two or more runs.
+  As params you can either give names of result files
+  or run the script without params (result files will be searched in test/results/).
 
 Further files:
 - benchmark.dtd: DTD for validating benchmark.py input files
 - benchmark-result.dtd: DTD for validating benchmark.py output files
 - report-template.html: template for the report generator script
-- table-generator-template.py: template for the table generator script
+- table-generator-template.*: templates for the table generator script
